src/test/ui/rfc-2627-raw-dylib/link-ordinal-invalid-format.stderr
warning: the feature `raw_dylib` is incomplete and may cause the compiler to crash
  --> $DIR/link-ordinal-invalid-format.rs:1:12
   |
LL | #![feature(raw_dylib)]
   |            ^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error: illegal ordinal format in `link_ordinal`
  --> $DIR/link-ordinal-invalid-format.rs:6:5
   |
LL |     #[link_ordinal("JustMonika")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: an unsuffixed integer value, e.g., `1`, is expected

error: aborting due to previous error

